--- a/package.json
+++ b/package.json
@@ -30,7 +30,13 @@
         "gulp-replace": "^0.5.3",
         "merge-stream": "^0.1.7",
         "vinyl-source-stream": "^1.1.0",
-        "watchify": "^3.2.1"
+        "watchify": "^3.2.1",
+        "underscore": "^1.8.2",
+        "body-parser": "^1.12.3",
+        "socket.io": "^1.3.4",
+        "socket.io-client": "^1.3.4",
+        "colors": "^1.0.3",
+        "mongoose": "^4.0.2"
     },
     "devDependencies": {
         "gulp": "^3.8.10"
