--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
         "socket.io": "^1.3.4",
         "socket.io-client": "^1.3.4",
         "colors": "^1.0.3",
-        "mongoose": "^4.0.2"
+        "mongoose": "^4.0.2",
+        "react-mask-mixin": "^0.0.4"
     },
     "devDependencies": {
         "gulp": "^3.8.10"
