--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
         "socket.io-client": "^1.3.4",
         "colors": "^1.0.3",
         "mongoose": "^4.0.2",
-        "react-mask-mixin": "^0.0.4"
+        "react-mask-mixin": "^0.0.4",
+        "object-assign": "^2.1.1"
     },
     "devDependencies": {
         "gulp": "^3.8.10"
