--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "react-tappable": "^0.2.5",
         "react-timers": "^2.0.0",
         "superagent": "^0.21.0",
+        "xtend": "^4.0.0",
         "babelify": "^6.1.1",
         "brfs": "^1.4.0",
         "browserify": "^10.2.1",
