--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "socket.io-client": "^1.3.4",
         "colors": "^1.0.3",
         "mongoose": "^4.0.2",
+        "mongoose-auto-increment": "^5.0.1",
         "react-mask-mixin": "^0.0.4",
         "object-assign": "^2.1.1"
     },
