--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "gulp-uglify": "~1.2.0",
         "gulp-minify-css": "1.1.0",
         "gulp-replace": "^0.5.3",
+        "gulp-rename": "^1.2.2",
         "merge-stream": "^0.1.7",
         "vinyl-source-stream": "^1.1.0",
         "watchify": "^3.2.1",
